--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,21 @@ android {
 }
 
 dependencies {
-	implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_version"
 
 	implementation 'androidx.core:core-ktx:1.3.2'
+	implementation 'androidx.fragment:fragment-ktx:1.2.5'
 	implementation 'androidx.appcompat:appcompat:1.2.0'
 	implementation 'com.google.android.material:material:1.2.1'
 	implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+
+	implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+	implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+	implementation 'com.google.code.gson:gson:2.8.6'
 
 	testImplementation 'junit:junit:4.13.1'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.2'
