--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'com.android.application'
 	id 'kotlin-android'
+	id 'kotlin-kapt'
 }
 
 android {
@@ -14,6 +15,10 @@ android {
 		versionName "1.0"
 
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+	}
+
+	buildFeatures {
+		dataBinding = true
 	}
 
 	buildTypes {
@@ -33,7 +38,7 @@ android {
 
 dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_version"
+	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
 
 	implementation 'androidx.core:core-ktx:1.3.2'
 	implementation 'androidx.fragment:fragment-ktx:1.2.5'
