--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
 dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
+	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 
 	implementation 'androidx.core:core-ktx:1.3.2'
 	implementation 'androidx.fragment:fragment-ktx:1.2.5'
@@ -52,6 +52,8 @@ dependencies {
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 	implementation 'com.google.code.gson:gson:2.8.6'
+
+	implementation "io.coil-kt:coil:1.0.0"
 
 	testImplementation 'junit:junit:4.13.1'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.2'
