--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 	implementation 'com.google.code.gson:gson:2.8.6'
 
+	implementation "androidx.datastore:datastore-preferences:1.0.0-alpha04"
 	implementation "io.coil-kt:coil:1.0.0"
 
 	testImplementation 'junit:junit:4.13.1'
