--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,10 @@ dependencies {
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 	implementation 'com.google.code.gson:gson:2.8.6'
 
-	implementation "androidx.datastore:datastore-preferences:1.0.0-alpha04"
-	implementation "io.coil-kt:coil:1.0.0"
+	implementation 'androidx.datastore:datastore-preferences:1.0.0-alpha04'
+	implementation 'io.coil-kt:coil:1.0.0'
 
-	testImplementation 'junit:junit:4.13.1'
-	androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-	androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
+	testImplementation 'io.mockk:mockk:1.10.2'
+	testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9'
 }
