--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,12 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 		}
 	}
+
 	compileOptions {
 		sourceCompatibility JavaVersion.VERSION_1_8
 		targetCompatibility JavaVersion.VERSION_1_8
 	}
+
 	kotlinOptions {
 		jvmTarget = '1.8'
 	}
@@ -38,25 +40,25 @@ android {
 
 dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
 
-	implementation 'androidx.core:core-ktx:1.3.2'
-	implementation 'androidx.fragment:fragment-ktx:1.2.5'
-	implementation 'androidx.appcompat:appcompat:1.2.0'
-	implementation 'com.google.android.material:material:1.2.1'
-	implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+	implementation 'androidx.core:core-ktx:1.6.0'
+	implementation 'androidx.fragment:fragment-ktx:1.3.6'
+	implementation 'androidx.appcompat:appcompat:1.3.1'
+	implementation 'com.google.android.material:material:1.4.0'
+	implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
 
-	implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-	implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+	implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+	implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-	implementation 'com.google.code.gson:gson:2.8.6'
+	implementation 'com.google.code.gson:gson:2.8.7'
 
-	implementation 'androidx.datastore:datastore-preferences:1.0.0-alpha04'
+	implementation 'androidx.datastore:datastore-preferences:1.0.0'
 	implementation 'io.coil-kt:coil:1.0.0'
 
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
 	testImplementation 'io.mockk:mockk:1.10.2'
-	testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9'
+	testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
 }
