--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,20 @@ dependencies {
 
 	implementation 'androidx.datastore:datastore-preferences:1.0.0'
 	implementation 'io.coil-kt:coil:1.0.0'
+	implementation 'androidx.test:rules:1.4.0'
 
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
 	testImplementation 'io.mockk:mockk:1.10.2'
 	testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+
+	implementation 'androidx.test:core:1.4.0'
+
+	testImplementation 'junit:junit:4.13.2'
+	testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.1.7'
+
+	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+	androidTestImplementation 'com.kaspersky.android-components:kaspresso:1.2.1'
+	androidTestImplementation 'com.kaspersky.android-components:kaspresso:1.2.1-support'
+	androidTestImplementation 'io.github.kakaocup:kakao:3.0.2'
+
 }
